Fix T64758: crash loading certain DDS textures